--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
     "@expo/webpack-config": "^18.0.1",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.15",
+    "expo-av": "~13.2.1",
     "expo-status-bar": "~1.4.4",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-web": "~0.18.10",
-    "expo-av": "~13.2.1"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
