--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "animar",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.7.14",
-    "@expo/webpack-config": "^18.0.1",
-    "date-fns": "^2.30.0",
-    "expo": "~48.0.15",
-    "expo-av": "~13.2.1",
-    "expo-status-bar": "~1.4.4",
-    "graphql": "^15.8.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-web": "~0.18.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "eslint": "^8.41.0",
-    "eslint-plugin-react": "^7.32.2"
-  },
-  "private": true
+    "name": "animar",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "build:apk": "eas build -p android --profile apk"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.7.14",
+        "@expo/webpack-config": "^18.0.1",
+        "date-fns": "^2.30.0",
+        "expo": "~48.0.15",
+        "expo-av": "~13.2.1",
+        "expo-status-bar": "~1.4.4",
+        "graphql": "^15.8.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-native": "0.71.8",
+        "react-native-web": "~0.18.10"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "eslint": "^8.41.0",
+        "eslint-plugin-react": "^7.32.2"
+    },
+    "private": true
 }
