feat: fix not booting on android tv

--- a/app.json
+++ b/app.json
@@ -21,7 +21,13 @@
                 "foregroundImage": "./assets/adaptive-icon.png",
                 "backgroundColor": "#ffffff"
             },
-            "package": "com.zelak.Animar"
+            "package": "com.zelak.Animar",
+            "intentFilters": [
+                {
+                    "action": "MAIN",
+                    "category": ["LEANBACK_LAUNCHER"]
+                }
+            ]
         },
         "web": {
             "favicon": "./assets/favicon.png"
